--- a/master/client/src/locales/ru-ru.json
+++ b/master/client/src/locales/ru-ru.json
@@ -14,7 +14,14 @@
     "default_playlist": "Общее расписание",
     "save": "Сохранить",
     "add": "Добавить",
-    "delete": "Удалить"
+    "delete": "Удалить",
+    "play_in_order": "Воспроизводить по порядку",
+    "shuffle": "Перемешать файлы",
+    "add_directory": "Добавить директорию",
+    "delete_interval": "Удалить интервал",
+    "add_interval": "Добавить интервал",
+    "yes": "Да",
+    "no": "Нет"
   },
   "menus": {
     "schedule": "Расписание",
@@ -38,6 +45,17 @@
     "fills_working_hours_exceptions": "Добавьте исключения, чтобы определить режим работы плеера для определенной даты",
     "date": "Дата",
     "start_time": "Время начала",
-    "end_time": "Время окончания"
+    "end_time": "Время окончания",
+    "shuffle_mode_description": "При включении режима перемешивания каждый раз для воспроизведения будет выбираться случайный файл",
+    "music": "Воспроизведение музыки",
+    "start_date": "Дата начала",
+    "end_date": "Дата окончания",
+    "interval": "Интервал",
+    "directories": "Директории",
+    "music_schedule_description": "Добавьте интервалы воспроизведения и директории с музыкальными файлами для каждого интервала. Интервал с годом 1970 будет действовать ежегодно",
+    "no_intervals_added": "Нет добавленных интервалов",
+    "no_directories_added": "Нет добавленных директорий",
+    "confirm_action": "Подтвердить действие",
+    "are_you_shure_you_want_to_do_this": "Вы уверены что хотите выполнить это действие"
   }
 }
