--- a/master/client/src/locales/ru-ru.json
+++ b/master/client/src/locales/ru-ru.json
@@ -3,7 +3,10 @@
     "wrong_password": "Неверный пароль",
     "success_login": "Осуществлен успешный вход",
     "validation_error": "Данные формы не валидны",
-    "data_saved_success": "Данные формы успешно сохранены"
+    "data_saved_success": "Данные формы успешно сохранены",
+    "start_date_must_not_be_greater_then_end_date": "Дата начала не должна превышать дату окончания интервала",
+    "start_time_must_not_be_greater_then_end_time": "Время начала не должно превышать времени окончания",
+    "required_field": "Обязательное поле"
   },
   "controls": {
     "node_filter": "Фильтр...",
