--- a/master/client/src/locales/en-us.json
+++ b/master/client/src/locales/en-us.json
@@ -67,6 +67,7 @@
     "are_you_shure_you_want_to_do_this": "Are you shure you want to do this",
     "choose_file": "Choose file",
     "choose_folder": "Choose folder",
-    "advertizement": "Advertizement"
+    "advertizement": "Advertizement",
+    "advertizement_block": "Advertizement block"
   }
 }
